# A.L.F.R.E.D.

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  MARKS.md
brain/: .env.example  README.md  pyproject.toml
brain/src/alfred_brain/: __init__.py  __main__.py  agent.py  config.py  events.py  messages.py  persona.py  server.py  session.py
brain/src/alfred_brain/config/: __init__.py  bootstrap.py  paths.py  settings.py  toml_source.py  view.py
brain/src/alfred_brain/memory/: __init__.py  extraction.py  (+6 more)
brain/tests/: conftest.py  test_agent_loop.py  test_agent_memory.py  test_config.py  test_config_bootstrap.py  test_config_endpoint.py  test_config_memory.py  test_config_reload.py  test_config_toml.py  test_config_view.py  test_e2e_mock_client.py  test_events.py  test_groq_provider.py  test_main_bootstrap.py  test_memory_extraction.py  test_memory_facade.py  test_memory_index.py  test_memory_integration.py  test_memory_panel_ws.py  test_memory_record.py  test_memory_tools.py  test_memory_vault.py  test_memory_wiring.py  test_memory_working.py  test_messages.py  test_models_endpoint.py  test_persona.py  test_provider_registry.py  test_scripted_provider.py  test_server_http.py  test_server_ws.py  test_session.py  test_tools.py
desktop-ui/src-tauri/: Cargo.toml  tauri.conf.json
desktop-ui/src-tauri/capabilities/: default.json
desktop-ui/src-tauri/src/: main.rs
protocol/: .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
protocol/fixtures/: agent_action.json  agent_message.json  agent_thought.json  agent_turn_complete.json  client_hello.json  command_ack.json  command_submit.json  error.json  kill_switch_ack.json  kill_switch_activate.json  memory_ack.json  memory_delete.json  memory_edit.json  memory_formed.json  memory_list_request.json  memory_list_response.json  memory_removed.json  server_hello.json  status_request.json  status_response.json
protocol/mock/: client.ts  server.py
protocol/schema/: protocol.schema.json
protocol/scripts/: codegen.py
protocol/tests/python/: test_integration.py  test_mock_server.py  test_roundtrip.py  test_schema_valid.py
protocol/tests/typescript/: conformance.test-d.ts  roundtrip.test.ts
(+78 files in other folders)
