[project]
name = "alfred-brain"
version = "0.1.0"
description = "ALFRED brain: WebSocket/HTTP server, reasoning provider, agent loop."
requires-python = ">=3.12"
dependencies = [
    "alfred-protocol",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "google-genai>=1.0,<2",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.uv.sources]
alfred-protocol = { path = "../protocol", editable = true }

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alfred_brain"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: cross-language end-to-end tests (needs Node + pnpm)"]
