[project]
name = "alfred-protocol"
version = "0.1.0"
description = "ALFRED shared WebSocket/HTTP contract: schema, generated Pydantic models, fixtures, and reference mock server."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.25.5",
    "jsonschema>=4.21",
    "pytest>=8.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "websockets>=12.0",
    "httpx>=0.27",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gen/python/alfred_protocol"]

[tool.pytest.ini_options]
pythonpath = ["gen/python", "."]
testpaths = ["tests/python"]
markers = ["integration: cross-language end-to-end tests (needs Node + pnpm)"]
